adding new function two the gui class for debugging or to show a variable in window and fixing the collision logic of the ball with the blocks

--- a/BreakOut-ImGui/imgui.ini
+++ b/BreakOut-ImGui/imgui.ini
@@ -1,8 +1,73 @@
 [Window][Debug##Default]
-Pos=294,77
+Pos=258,129
 Size=735,491
+Collapsed=1
 
 [Window][show_keys]
 Pos=0,0
 Size=213,120
+
+[Window][show vectorcenter of ball]
+Pos=1,1
+Size=412,323
+
+[Window][show vectorplayer pos]
+Pos=11,385
+Size=300,50
+
+[Window][menu]
+Pos=0,0
+Size=1280,720
+
+[Window][demo of move]
+Pos=200,200
+Size=146,125
+
+[Window][show vectorclosest vector in check collision]
+Pos=215,52
+Size=367,195
+
+[Window][show vector closest vector in check collision]
+Pos=49,21
+Size=508,251
+
+[Window][variable i in for collision: ]
+Pos=623,0
+Size=305,129
+
+[Window][show vector player pos]
+Pos=60,60
+Size=292,48
+
+[Window][show vector ball pos]
+Pos=626,31
+Size=285,48
+
+[Window][variable Lives: : ]
+Pos=4,4
+Size=88,48
+
+[Window][variable Lives : ]
+Pos=1,1
+Size=94,32
+
+[Window][variable Lives]
+Pos=1,1
+Size=112,32
+
+[Window][show vector variable size]
+Pos=60,60
+Size=299,48
+
+[Window][show vector size scaled]
+Pos=563,61
+Size=285,48
+
+[Window][show vector size scaled^2]
+Pos=232,214
+Size=306,48
+
+[Window][show vector size scaled*2]
+Pos=693,214
+Size=306,48
 
