--- a/BreakOut-ImGui/imgui.ini
+++ b/BreakOut-ImGui/imgui.ini
@@ -53,7 +53,7 @@ Size=94,32
 
 [Window][variable Lives]
 Pos=1,1
-Size=112,32
+Size=98,32
 
 [Window][show vector variable size]
 Pos=60,60
@@ -70,4 +70,44 @@ Size=306,48
 [Window][show vector size scaled*2]
 Pos=693,214
 Size=306,48
+
+[Window][variable Lives of player]
+Pos=1,1
+Size=210,32
+
+[Window][pause menu]
+Pos=0,0
+Size=1280,720
+
+[Window][variable random number]
+Pos=154,382
+Size=241,61
+
+[Window][show vector box pos]
+Pos=60,60
+Size=309,615
+
+[Window][show vector powerUp pos]
+Pos=592,273
+Size=299,48
+
+[Window][variable size of powerUpsArray]
+Pos=60,60
+Size=184,48
+
+[Window][show vector powerUp0]
+Pos=60,60
+Size=278,48
+
+[Window][show vector powerUp1]
+Pos=85,148
+Size=274,177
+
+[Window][show vector powerUp2]
+Pos=522,99
+Size=278,48
+
+[Window][show vector powerUpPos]
+Pos=60,60
+Size=305,194
 
